--- a/templates/results.html
+++ b/templates/results.html
@@ -103,17 +103,15 @@
 
         <footer>
             <div class="footer-social-links">
-                <a href="https://www.youtube.com/@HistoryCharts" target="_blank" class="footer-link" title="YouTube">
-                    <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
+                <a href="https://www.youtube.com/@HistoryCharts" target="_blank" class="footer-link" title="YouTube" aria-label="YouTube">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
                         <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
                     </svg>
-                    <span>YouTube</span>
                 </a>
-                <a href="https://www.patreon.com/Chart_History" target="_blank" class="footer-link" title="Patreon">
-                    <svg width="32" height="32" viewBox="0 0 24 24" fill="white">
+                <a href="https://www.patreon.com/Chart_History" target="_blank" class="footer-link" title="Patreon" aria-label="Patreon">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
                         <path d="M15.386.524c-4.764 0-8.64 3.876-8.64 8.64 0 4.75 3.876 8.613 8.64 8.613 4.75 0 8.614-3.864 8.614-8.613C24 4.4 20.136.524 15.386.524M.003 23.537h4.22V.524H.003"/>
                     </svg>
-                    <span>Patreon</span>
                 </a>
             </div>
             <p>Billboard Hot 100 Chart Analyzer</p>
